fluxcd/apps/overlays/production/joplin/service-joplin-app-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin-app
  labels:
    policy.prplanit.com/ingress: "true"
