fluxcd/apps/overlays/production/joplin/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: joplin-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Content & Media (Temple of Time🏛️)"
      conditions:
        - "[STATUS] == any(200, 302)"
        - "[BODY] != pat(*Fairer Pages*)"
        - "[RESPONSE_TIME] < 5000"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "joplin.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: joplin-app
          port: 22300
